# galaxybox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: build-publish.yaml  build-validation.yaml  version-bump-and-tag.yaml
galaxybox/: .gitignore  __init__.py
galaxybox/helper_functions/: functions.py
galaxybox/io/: emerge_io.py
galaxybox/mock_observables/: __init__.py  lightcone.py
galaxybox/plot/: emerge_plot.py  plot.py
galaxybox/sim_managers/: universe.py
galaxybox/sim_managers/emerge/: __init__.py  configuration_file.py  fitting_files.py  galaxy_catalog.py  galaxy_trees.py  halo_trees.py  lightcone_catalog.py  mergers.py  parameter_file.py  statistics.py
scripts/: emerge_to_galaxybox_trees.py  make_lightcone_catalog.py  subhalo_mergers.py  tree_to_isotree.py
src/galaxybox/configs/: emerge-galaxy.alias.yaml
src/galaxybox/data/: cosmic_time.py  emerge_io.py  io.py  utils.py
src/galaxybox/data/galaxy/: trees.py
src/galaxybox/data/io/: emerge_io.py
src/galaxybox/data/trees/: emerge.py  parquet.py  proto_tree.py  pytables.py  rockstar.py
src/galaxybox/helper_functions/: functions.py
src/galaxybox/io/: emerge_io.py  io.py
src/galaxybox/mock_observables/: __init__.py  lightcone.py
src/galaxybox/modules/: universe.py
src/galaxybox/modules/emerge/: __init__.py  configuration_file.py  fitting_files.py  galaxy_catalog.py  galaxy_trees.py  halo_trees.py  lightcone_catalog.py  mergers.py  parameter_file.py  statistics.py
src/galaxybox/modules/mocks/: lightcone.py
src/galaxybox/modules/trees/: emerge.py  proto_tree.py
src/galaxybox/plot/: emerge_plot.py  plot.py
src/galaxybox/sim_managers/: __init__.py  universe.py
src/galaxybox/sim_managers/emerge/: __init__.py  configuration_file.py  fitting_files.py  galaxy_catalog.py  galaxy_trees.py  halo_trees.py  lightcone_catalog.py  mergers.py  parameter_file.py  statistics.py
src/galaxybox/utils/: functions.py  logmath.py
src/galaxybox/visualization/: emerge_plot.py  plot.py  tree.py
tests/data/: test_cosmic_time.py  test_utils.py
tests/utils/: test_logmath.py
